     Tom on Launchpad)

   * Fixing arguments passed to the _Error if invalid read length.

   * Fixing the representation of domain sockets.  (Patch provided by user
     MTB on Launchpad)

   * Changing a typo of dead_until.  (Patch provided by Shane R. Spencer)

   * Providing better error messages (patch provided by Johan Euphrosine).

Sun, 01 Jun 2008 15:05:11 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.43

   *  eliott reported a bug in the 1.42 related to the socket timeout code
      causing a traceback due to the timeout value not being set.

Sat, 31 May 2008 02:09:17 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.42

   *  Paul Hummer set up a Launchpad project which I'm going to start using
      to track patches and allow users to set up their own bzr branches and
      manage marging in the upstream patches with their own.

         https://launchpad.net/python-memcached

   *  Patch from Jehiah Czebotar which does: Changing the calls to
      mark_dead() to make them dereference tuples, reducing timeout on
      sockets to 3 seconds, settable via setting Host._SOCKET_TIMEOUT.

   *  Patches from Steve Schwarz for set_multi() to return the full set of
      keys if all servers are down.  Previously would not report any keys.

   *  Fix from Steve Schwarz delete_multi() argument "seconds" not being
      correctly handled.  Changed it to "time" to match all other calls.

   *  Patch from Peter Wilkinson to support using unix domain sockets.
      He reports that tests succeed with with memcached daemons running,
      the normal and a domain socket started via
      "memcached -s memcached.socket".  I massaged it quite a bit.

      To use domain sockets, use a connect string of "unix:/path/to/socket"
      Note however that if you are using a host name of "unix", it will now
      detect "unix:11211" as being a domain socket with the name "11211".
      In this case, please use "inet:unix:11211".
