@@ -17,6 +17,9 @@ Thu, 02 Apr 2009 13:37:49 -0600  Sean Reifschneider  <jafo@tummy.com>
 
    * Providing better error messages (patch provided by Johan Euphrosine).
 
+   * Adding get_slabs() function to get stats.  (Patch provided
+     by Nick Verbeck)
+
 Sun, 01 Jun 2008 15:05:11 -0600  Sean Reifschneider  <jafo@tummy.com>
 
    * Version 1.43
